--- a/lib/Chess/Position/Tutorial.pod
+++ b/lib/Chess/Position/Tutorial.pod
@@ -210,8 +210,8 @@ C<Chess::Position> instances or use constants for the indexes:
  $pos = Chess::Position->new;
  
  # Equivalent!
- $w_pieces = $pos[CP_POS_W_PIECES];
- $pos[CP_POS_W_PIECES] = $_pieces;
+ $w_pieces = $pos[CP_POS_WHITE_PIECES];
+ $pos[CP_POS_WHITE_PIECES] = $_pieces;
  $w_pieces = cp_pos_w_pieces $pos;
  cp_pos_w_pieces $pos = $w_pieces;
 
@@ -267,7 +267,7 @@ move are:
 
 =over
 
-=item * 16-18 (15-17): piece that moves (resp. attacker)
+=item * 16-18 (15-17): piece that moves (resp. piece)
 
 =item * 13-15 (12-14): promotion piece
 
@@ -283,7 +283,7 @@ Only bits 1 to 15 are really needed to characterize a move, and the bits
 13 to 15 are only needed for pawn promotions. The other bits can be
 derived from the position that the move is applied to.
 
-The piece that moves, the attacker is the piece that stands on the
+The piece that moves, the piece is the piece that stands on the
 starting square.  Note that this is never C<CP_QUEEN> even if the piece that
 moves is a queen.  It is either C<CP_BISHOP> or C<CP_ROOK> for queen moves,
 depending on how the queen moves.  This is a little bit confusing but has a
@@ -300,7 +300,7 @@ resp. inline functions for accessing individual properties:
 
 =item * C<cp_move_promotion($move)>: the promotion piece
 
-=item * C<cp_move_attacker($move)>: the attacking piece
+=item * C<cp_move_piece($move)>: the attacking piece
 
 =back
 
@@ -315,7 +315,7 @@ an assignment)! For this, use other macros:
 
 =item * C<cp_move_set_promotion($move, $piece)>: the promotion piece
 
-=item * C<cp_move_set_attacker($move, $piece)>: the attacking piece
+=item * C<cp_move_set_piece($move, $piece)>: the attacking piece
 
 =back
 
@@ -717,10 +717,10 @@ The castling state is encoded with other state information in one single
 integer as a bit mask.  It is highly recommended that you use the macros
 from L<Chess::Position::Macro> for it:
 
-    $white_can_castle_king_side  = cp_pos_w_ks_castle $pos;
-    $white_can_castle_queen_side = cp_pos_w_qs_castle $pos;
-    $black_can_castle_king_side  = cp_pos_b_ks_castle $pos;
-    $black_can_castle_queen_side = cp_pos_b_qs_castle $pos;
+    $white_can_castle_king_side  = cp_pos_white_king_side_castle $pos;
+    $white_can_castle_queen_side = cp_pos_white_queen_side_castle $pos;
+    $black_can_castle_king_side  = cp_pos_black_king_side_castle $pos;
+    $black_can_castle_queen_side = cp_pos_black_queen_side_castle $pos;
 
 =head3 En Passant
 
@@ -771,7 +771,7 @@ This information is always stored in a L<Chess::Position> object:
     } elsif (CP_EVASION_CAPTURE) {
         say "king can move or piece giving check can be captured";
     } elsif (CP_EVASION_ALL == $evasion_strategy) {
-        say "king can move, attacker can be captured, or check can be blocked:",
+        say "king can move, piece can be captured, or check can be blocked:",
             $pos->dumpBitboard(cp_pos_evasion_squares($pos));
     }
 
