--- a/lib/Chess/Position.pod
+++ b/lib/Chess/Position.pod
@@ -573,6 +573,37 @@ This method is relatively expensive!
 
 =back
 
+=head2 Analysis Methods
+
+These methods can be used to analyze features of the current position.
+
+=over 4
+
+=item B<attacked(SHIFT)>
+
+Returns true if the ssquare indicated by B<SHIFT> is attacked by a piece of
+the opponent.
+
+=item B<attackedMove(MOVE|NOTATION)>
+
+Returns true if when executing B<MOVE>, the moving piece would be attacked
+by a piece of the opponent.  A typical usage example would be to check if
+the king moving from B<FROM> to B<TO> would move into check.
+
+You can give the move either as an integer or in one of the supported move
+notations.
+
+=item B<pinnedMove(MOVE|NOTATION)>
+
+Returns true if a piece doing B<MOVE> is pinned.  A piece is pinned if it would
+leave the king in check when doing the move.  Exposing other pieces to an
+opponent attack is not considered a pin by this method.
+
+You can give the move either as an integer or in one of the supported move
+notations.
+
+=back
+
 =head2 Bit(board) Fiddling Methods
 
 =over 4
@@ -611,6 +642,58 @@ compilers llvm and gcc.
 
 =back
 
+=head2 Perft Methods
+
+A "perft" (B<PERF>ormance B<T>est) is a standard test for measuring the
+performance of the move generator.  Starting from the current position, it
+generates all legal moves up to the specified depth.  It is also important for
+testing the correct functioning of the move generator because the number of
+leave nodes for certain positions are well known.
+
+Internally, each legal move is applied to the position, then the next level
+is computed from the resulting position, and finally the move is undone.
+
+=over 4
+
+=item B<perftByCopy(DEPTH)>
+
+Does a performance test for the current position to depth B<DEPTH>.  Returns
+the number of leaf nodes found.
+
+Instead of calling L</undoMove> the moves found are applied to a copy of the
+current position that is discarded later.  This is currently slightly faster
+than undoing the move programatically with L</undoMove>.
+
+=item B<perftByUndo(DEPTH)>
+
+Does a performance test for the current position to depth B<DEPTH>.  Returns
+the number of leaf nodes found.
+
+Moves are undone programmatically with L</undoMove>.  This is currently
+slightly slower than just copying the position, see L</perftByCopy>.
+
+=item B<perftByCopyWithOutput(DEPTH, FILEHANDLE)>
+
+Does the the same as B<perftByCopy> but prints out all top-level moves found
+with the number of subnodes for each move.  The time needed is measured
+with L<Time::HiRes/gettimeofday> and reported at the end as well as the
+number of nodes found.
+
+This method can be used directly to implement the command "go perft" for a UCI
+compatible chess engine.
+
+=item B<perftByUndoWithOutput(DEPTH, FILEHANDLE)>
+
+Does the the same as B<perftByUndo> but prints out all top-level moves found
+with the number of subnodes for each move.  The time needed is measured
+with L<Time::HiRes/gettimeofday> and reported at the end as well as the
+number of nodes found.
+
+This method can be used directly to implement the command "go perft" for a UCI
+compatible chess engine.
+
+=back
+
 =head2 Methods for Debugging and Diagnostics
 
 =over 4
@@ -623,8 +706,6 @@ if any inconsistency is encountered.
 =item B<dumpBitboard(BITBOARD)>
 
 Generate a string representation of B<BITBOARD> in ASCII art.
-
-=back
 
 =item B<dumpAll>
 
@@ -640,6 +721,8 @@ L</info>.
 
 Takes an array of moves (as integers) and converts it into an array of moves
 in coordinate notation.
+
+=back
 
 =head1 PROPERTIES
 
