--- a/lib/Chess/Position.pod
+++ b/lib/Chess/Position.pod
@@ -587,7 +587,7 @@ These methods can be used to analyze features of the current position.
 Returns true if the ssquare indicated by B<SHIFT> is attacked by a piece of
 the opponent.
 
-=item B<attackedMove(MOVE|NOTATION)>
+=item B<moveAttacked(MOVE|NOTATION)>
 
 Returns true if when executing B<MOVE>, the moving piece would be attacked
 by a piece of the opponent.  A typical usage example would be to check if
@@ -596,7 +596,7 @@ the king moving from B<FROM> to B<TO> would move into check.
 You can give the move either as an integer or in one of the supported move
 notations.
 
-=item B<pinnedMove(MOVE|NOTATION)>
+=item B<movePinned(MOVE|NOTATION)>
 
 Returns true if a piece doing B<MOVE> is pinned.  A piece is pinned if it would
 leave the king in check when doing the move.  Exposing other pieces to an
